base/vault/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault
  namespace: vault
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/whitelist-source-range: '192.168.0.0/22,10.0.0.0/8,127.0.0.1'
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - vault.services.juicecloud.org
    secretName: vault-cert
  rules:
  - host: vault.services.juicecloud.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vault
            port:
              number: 8200
